Adds solutions for W4D1, and activities for W4D2

--- a/04-Web-APIs/01-Activities/05-Ins_Setting-Attributes/index.html
+++ b/04-Web-APIs/01-Activities/05-Ins_Setting-Attributes/index.html
@@ -19,6 +19,7 @@
     <p id="change2">We can also grab elements using the id.</p>
     </section>
 
+<div class="change1">I'm outside</div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
