--- a/05-Third-Party-APIs/01-Activities/11-Ins_Bootstrap-Components/component-card.html
+++ b/05-Third-Party-APIs/01-Activities/11-Ins_Bootstrap-Components/component-card.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="Description" content="Enter your description here" />
   <!-- Link to Bootstrap's CDN -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
   <title>Cards // Bootstrap UI Components</title>
 </head>
 
@@ -21,7 +21,7 @@
         <div class="col-12 col-sm-6 col-md-3 mb-3">
           <div class="card">
             <h4 class="card-header">This is a card header.</h4>
-            <img src="https://via.placeholder.com/400" alt="The placeholder image helps demonstrate this card component"
+            <img src="./assets/placeholder-400.png" alt="The placeholder image helps demonstrate this card component"
               class="card-img-top" />
             <div class="card-body">
               <p class="card-text">
@@ -40,7 +40,7 @@
           <div class="card">
             <div class="row no-gutters">
               <div class="col-12 col-md-4">
-                <img src="https://via.placeholder.com/400" alt="The placeholder image helps demonstrate this card component"
+                <img src="./assets/placeholder-400.png" alt="The placeholder image helps demonstrate this card component"
                   class="card-img">
               </div>
               <div class="col-12 col-md-8">
@@ -64,11 +64,7 @@
     </div>
   </main>
 
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 </html>
