--- a/05-Third-Party-APIs/01-Activities/11-Ins_Bootstrap-Components/component-form.html
+++ b/05-Third-Party-APIs/01-Activities/11-Ins_Bootstrap-Components/component-form.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="Description" content="Enter your description here" />
   <!-- Link to Bootstrap's CDN -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
   <title>Forms // Bootstrap UI Components</title>
 </head>
 
@@ -18,20 +18,20 @@
       <h1 class="display-2 text-center text-light">Forms</h1>
       <div class="row justify-content-center">
         <!-- Default Form -->
-        <div class="col-12 col-md-10 mb-3 p-4 bg-white">
+        <div class="col-12 col-md-10 mb-3 p-3 bg-white">
           <form>
-            <div class="form-group">
+            <div class="form-group p-2">
               <label for="email-input">Email address</label>
               <input type="email" class="form-control" id="email-input" aria-describedby="emailHelp">
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
                 else.</small>
             </div>
-            <div class="form-group">
+            <div class="form-group p-2">
               <label for="password-input">Password</label>
               <input type="password" class="form-control" id="password-input">
             </div>
 
-            <div class="form-group">
+            <div class="form-group p-2">
               <label for="exampleFormControlSelect1">Example select</label>
               <select class="form-control" id="exampleFormControlSelect1">
                 <option>1</option>
@@ -41,7 +41,7 @@
                 <option>5</option>
               </select>
             </div>
-            <div class="form-group">
+            <div class="form-group p-2">
               <label for="exampleFormControlSelect2">Example multiple select</label>
               <select multiple class="form-control" id="exampleFormControlSelect2">
                 <option>1</option>
@@ -51,21 +51,18 @@
                 <option>5</option>
               </select>
             </div>
-            <div class="form-group">
+            <div class="form-group p-2">
               <label for="exampleFormControlTextarea1">Example textarea</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
 
-            <div class="form-group form-check">
+            <div class="form-group form-check p-3">
               <input type="checkbox" class="form-check-input" id="newsletter-input">
               <label class="form-check-label" for="newsletter0input">Sign up for our newsletter.</label>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
-
-
-
 
 
         <div class="col-12 text-center">
@@ -76,11 +73,7 @@
     </div>
   </main>
 
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 </html>
