--- a/05-Third-Party-APIs/01-Activities/11-Ins_Bootstrap-Components/index.html
+++ b/05-Third-Party-APIs/01-Activities/11-Ins_Bootstrap-Components/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="Description" content="Enter your description here" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
   <title>Bootstrap UI Components</title>
 </head>
 
@@ -18,14 +18,14 @@
       <div class="row justify-content-center">
         <div class="col-12 col-md-9 p-4 bg-dark">
           <div class="row">
-            <div class="col-12 col-md-4 ">
-              <a href="./component-navbar.html" class="btn btn-block p-3 my-2 btn-success">Navbar</a>
+            <div class="col-14 col-md-4">
+              <a href="./component-navbar.html" class="btn btn-success p-3 my-2 w-100">Navbar</a>
             </div>
             <div class="col-12 col-md-4 ">
-              <a href="./component-card.html" class="btn btn-block p-3 my-2 btn-danger">Cards</a>
+              <a href="./component-card.html" class="btn btn-danger p-3 my-2 w-100">Cards</a>
             </div>
             <div class="col-12 col-md-4 ">
-              <a href="./component-form.html" class="btn btn-block p-3 my-2 btn-info">Forms</a>
+              <a href="./component-form.html" class="btn btn-info p-3 my-2 w-100">Forms</a>
             </div>
           </div>
         </div>
