--- a/05-Third-Party-APIs/01-Activities/12-Stu_Bootstrap-Components/Unsolved/index.html
+++ b/05-Third-Party-APIs/01-Activities/12-Stu_Bootstrap-Components/Unsolved/index.html
@@ -6,50 +6,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="Description" content="Enter your description here" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
   <title>Bootstrap Components</title>
 </head>
 
 <body>
 
   <!-- Add a navbar here -->
-  <!-- https://getbootstrap.com/docs/4.5/components/navbar/ -->
+  <!-- https://getbootstrap.com/docs/5.1/components/navbar/ -->
 
 
   <!-- create page margins -->
   <main class="container-fluid my-3">
-    <!-- Add a jumbotron here -->
-    <!-- https://getbootstrap.com/docs/4.5/components/jumbotron/ -->
 
     <hr />
 
     <!-- Add a dismissible alert here -->
-    <!-- https://getbootstrap.com/docs/4.5/components/alerts/ -->
+    <!-- https://getbootstrap.com/docs/5.1/components/alerts/ -->
 
     <hr />
 
     <h2>Fill Out This Form!</h2>
     <!-- Add a form here -->
-    <!-- https://getbootstrap.com/docs/4.5/components/forms/ -->
+    <!-- https://getbootstrap.com/docs/5.1/forms/overview/ -->
 
     <hr />
 
     <h2>Check Out This List!</h2>
     <!-- Add a list with badges here -->
-    <!-- https://getbootstrap.com/docs/4.5/components/list-group -->
+    <!-- https://getbootstrap.com/docs/5.1/components/list-group/ -->
 
     <hr />
 
     <h2>Check Out This Card!</h2>
     <!-- Add a card with a header, list, and footer here  -->
-    <!-- https://getbootstrap.com/docs/4.5/components/card/ -->
+    <!-- https://getbootstrap.com/docs/5.1/components/card/ -->
 
   </main>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 </html>
