--- a/05-Third-Party-APIs/01-Activities/13-Ins_Bootstrap-Layout/index.html
+++ b/05-Third-Party-APIs/01-Activities/13-Ins_Bootstrap-Layout/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="Description" content="Enter your description here" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 
   <title>Bootstrap Layouts</title>
 </head>
@@ -16,7 +16,7 @@
   <header class="container-fluid bg-dark text-light mb-5 p-3">
     <div class="d-flex align-items-center">
       <h1>Layouts with Bootstrap</h1>
-      <h3 class="ml-auto">
+      <h3 class="ms-auto">
         Even this is a layout
       </h3>
     </div>
@@ -27,7 +27,7 @@
     <!-- Use row class to create row in the container -->
     <div class="row">
       <!-- Use col-* classes for different column sizes on different screens -->
-      <div class="col-12 col-md-8 col-xl-9">
+      <div class="col-12 col-md-8 col-lg-9">
         <h3>Main Content</h3>
         <h5>9/12 columns on large screens, 8/12 columns on medium screens, 12/12 (full-width) on small
           screens</h5>
@@ -38,7 +38,7 @@
         </p>
       </div>
 
-      <div class="col-12 col-md-4 col-xl-3">
+      <div class="col-12 col-md-4 col-lg-3">
         <h3>Sidebar Content</h3>
         <ul>
           <li>Spans 3 / 12 columns on large screens</li>
@@ -101,7 +101,7 @@
   <!-- Two column layout with a grid in the left column -->
   <section class="container my-5 bg-dark text-light">
     <div class="row">
-      <div class="col-12 col-md-8 col-xl-9">
+      <div class="col-12 col-md-8 col-lg-9">
         <h3>Main Content</h3>
         <h5>9/12 columns on large screens, 8/12 columns on medium screens, 12/12 (full-width) on small
           screens</h5>
@@ -152,7 +152,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-4 col-xl-3">
+      <div class="col-12 col-md-4 col-lg-3">
         <h3>Sidebar Content</h3>
         <ul>
           <li>Spans 3 / 12 columns on large screens</li>
