--- a/05-Third-Party-APIs/01-Activities/15-Ins_Bootstrap-Utilities/index.html
+++ b/05-Third-Party-APIs/01-Activities/15-Ins_Bootstrap-Utilities/index.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="Description" content="Enter your description here" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 
   <title>Bootstrap Utilities</title>
 </head>
 
 <body>
   <!-- Bootstrap uses color utility classes to set colors for text and background colors -->
-  <header class="jumbotron jumbotron-fluid bg-dark text-light">
+  <header class="p-5 mb-4 bg-dark text-light">
     <div class="container">
       <!-- Use align-items utilities on flexbox containers to align to start, end, center, baseline, or stretch -->
       <div class="row align-items-end">
@@ -124,15 +124,15 @@
       <div class="col-12 col-sm-6 col-md-4">
         <h2>Leave a Comment</h2>
         <form>
-          <div class="form-group">
+          <div class="form-group p-2">
             <label for="name-input">Your name:</label>
             <input type="text" class="form-control" id="name-input" placeholder="Leave your name" />
           </div>
-          <div class="form-group">
+          <div class="form-group p-2">
             <label for="comment-input">Your message:</label>
             <textarea name="comment" id="comment-input" class="form-control"></textarea>
           </div>
-          <button class="btn btn-success">Submit Message.</button>
+          <button class="btn btn-success m-2">Submit Message.</button>
         </form>
       </div>
     </section>
