--- a/05-Third-Party-APIs/01-Activities/16-Stu_Bootstrap-Utilities/Unsolved/index.html
+++ b/05-Third-Party-APIs/01-Activities/16-Stu_Bootstrap-Utilities/Unsolved/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="Description" content="Enter your description here" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 
   <title>Bootstrap Utilities</title>
 </head>
@@ -27,22 +27,22 @@
         <!-- Add classes to apply a white background, rounded corners, padding, and margin on the y-axis (top and bottom) -->
         <form class="">
           <h3>Fill out the form and get started!</h3>
-          <div class="form-group">
+          <div class="form-group py-2">
             <label for="username">Username</label>
             <input type="text" id="username" class="form-control" placeholder="Username" required />
           </div>
-          <div class="form-group">
+          <div class="form-group py-2">
             <label for="email">Email</label>
             <input type="text" id="email" class="form-control" placeholder="Username" required />
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
 
-          <div class="form-group">
+          <div class="form-group py-2">
             <label for="password">Password</label>
             <input type="text" id="password" class="form-control" placeholder="Password" required />
           </div>
 
-          <div class="form-group">
+          <div class="form-group py-2">
             <label for="referral">Where did you hear about us?</label>
             <select class="form-control" id="referral">
               <option disabled selected>Pick One...</option>
@@ -54,7 +54,7 @@
             </select>
           </div>
 
-          <div class="form-group">
+          <div class="form-group py-2">
             <div class="form-check">
               <input class="form-check-input" type="checkbox" value="yes" id="mailing-list">
               <label class="form-check-label" for="mailing-list">
@@ -63,7 +63,7 @@
             </div>
           </div>
 
-          <button class="btn btn-block btn-success">Complete Signup!</button>
+          <button class="btn btn-block btn-success w-100">Complete Signup!</button>
         </form>
       </div>
     </section>
