--- a/11-Express/01-Activities/09-Ins_Static-Assets/public/index.html
+++ b/11-Express/01-Activities/09-Ins_Static-Assets/public/index.html
@@ -12,6 +12,6 @@
       alt="Cat picture"
       id="static-route"
     />
-    <img src="http://localhost:3000/images/cat.jpg" id="static-img" />
+    <img src="images/cat.jpg" id="static-img" />
   </body>
 </html>
